@@ -1,0 +1,184 @@
+comment_char    %
+escape_char     /
+% Urdu language locale for India.
+% Contributed by Pravin Satpute <psatpute@redhat.com> and
+% Mrs. Nasreen Khan 
+
+LC_IDENTIFICATION
+
+title      "Urdu language locale for India"
+source     "Red Hat, Pune"
+address    "Marisfot III, Marigold Premises, East-Wing, Kalyaninagar, Pune, India-411014"
+contact    ""
+email      "bug-glibc-locales@gnu.org"
+tel         ""
+fax         ""
+language    "Urdu"
+territory   "India"
+revision    "1.0"
+date        "2009,June,09"
+%
+category  "ur_IN:2009";LC_IDENTIFICATION
+category  "ur_IN:2009";LC_CTYPE
+category  "ur_IN:2009";LC_COLLATE
+category  "ur_IN:2009";LC_TIME
+category  "ur_IN:2009";LC_NUMERIC
+category  "ur_IN:2009";LC_MONETARY
+category  "ur_IN:2009";LC_MESSAGES
+category  "ur_IN:2009";LC_PAPER
+category  "ur_IN:2009";LC_NAME
+category  "ur_IN:2009";LC_ADDRESS
+category  "ur_IN:2009";LC_TELEPHONE
+
+
+END LC_IDENTIFICATION
+
+
+LC_CTYPE
+copy "i18n"
+
+translit_start
+include  "translit_combining";""
+translit_end
+END LC_CTYPE
+
+
+LC_COLLATE
+% Copy the template from ISO/IEC 14651
+copy "iso14651_t1"
+
+END LC_COLLATE
+
+
+LC_MONETARY
+copy "ar_IN"
+END LC_MONETARY
+
+
+LC_NUMERIC
+copy "hi_IN"
+END LC_NUMERIC
+
+
+LC_TIME
+% This is the POSIX Locale definition for the LC_TIME category
+% generated by IBM Basic CountryPack Transformer.
+% These are generated based on XML base Locale definition file
+% for IBM Class for Unicode.
+%
+% Abbreviated weekday names (%a)
+abday       "<U0627><U062A><U0648><U0627><U0631>";/
+	    "<U067E><U06CC><U0631>";/
+            "<U0645><U0646><U06AF><U0644>";/
+	    "<U0628><U062f><U06be>";/
+            "<U062C><U0645><U0639><U0631><U0627><U062A>";/
+            "<U062C><U0645><U0639><U06C1>";"<U0633><U0646><U06CC><U0686><U0631>"
+%
+% Full weekday names (%A)
+day       "<U0627><U062A><U0648><U0627><U0631>";/
+	    "<U067E><U06CC><U0631>";/
+            "<U0645><U0646><U06AF><U0644>";/
+	    "<U0628><U062f><U06be>";/
+            "<U062C><U0645><U0639><U0631><U0627><U062A>";/
+            "<U062C><U0645><U0639><U06C1>";"<U0633><U0646><U06CC><U0686><U0631>"
+%
+% Abbreviated month names (%b)
+abmon     "<U062C><U0646><U0648><U0631><U06CC>";/
+	    "<U0641><U0631><U0648><U0631><U06CC>";/
+	    "<U0645><U0627><U0631><U0686>";/
+	    "<U0627><U067E><U0631><U06CC><U0644>";/
+	    "<U0645><U0626><U06CC>";/
+	    "<U062C><U0648><U0646>";/
+	    "<U062C><U0648><U0644><U0627><U0626><U06CC>";/
+	    "<U0627><U06AF><U0633><U062A>";/
+	    "<U0633><U062A><U0645><U0628><U0631>";/
+	    "<U0627><U0643><U062A><U0648><U0628><U0631>";/
+	    "<U0646><U0648><U0645><U0628><U0631>";/
+	    "<U062F><U0633><U0645><U0628><U0631>"
+%
+% Full month names (%B)
+mon     "<U062C><U0646><U0648><U0631><U06CC>";/
+	    "<U0641><U0631><U0648><U0631><U06CC>";/
+	    "<U0645><U0627><U0631><U0686>";/
+	    "<U0627><U067E><U0631><U06CC><U0644>";/
+	    "<U0645><U0626><U06CC>";/
+	    "<U062C><U0648><U0646>";/
+	    "<U062C><U0648><U0644><U0627><U0626><U06CC>";/
+	    "<U0627><U06AF><U0633><U062A>";/
+	    "<U0633><U062A><U0645><U0628><U0631>";/
+	    "<U0627><U0643><U062A><U0648><U0628><U0631>";/
+	    "<U0646><U0648><U0645><U0628><U0631>";/
+	    "<U062F><U0633><U0645><U0628><U0631>"
+%
+% Equivalent of AM PM
+am_pm	"<U0041><U004D>";"<U0050><U004D>"
+%
+% Appropriate date and time representation
+% %A %d %b %Y%I:%M:%S  %Z
+d_t_fmt     "<U0025><U0041><U0020><U0025><U0064><U0020><U0025><U0062>/
+<U0020><U0025><U0059><U0020><U0025><U0049><U003A><U0025><U004D><U003A>/
+<U0025><U0053><U0020><U0025><U0070><U0020><U0025><U005A>"
+%
+% Appropriate date representation
+% %A %d %b %Y
+d_fmt       "<U0025><U0041><U0020><U0025><U0064><U0020><U0025><U0062>/
+<U0020><U0025><U0059>"
+%
+% Appropriate time representation
+% %I:%M:%S  %Z
+t_fmt       "<U0025><U0049><U003A><U0025><U004D><U003A><U0025><U0053>/
+<U0020><U0020><U0025><U005A>"
+%
+% Appropriate 12 h time representation (%r)
+t_fmt_ampm  "<U0025><U0049><U003A><U0025><U004D><U003A><U0025><U0053>/
+<U0020><U0025><U0070><U0020><U0025><U005A>"
+%
+% Appropriate date representation (date(1))   "%a %b %e %H:%M:%S %Z %Y"
+date_fmt       "<U0025><U0061><U0020><U0025><U0062><U0020><U0025><U0065>/
+<U0020><U0025><U0048><U003A><U0025><U004D><U003A><U0025><U0053><U0020>/
+<U0025><U005A><U0020><U0025><U0059>"
+END LC_TIME
+
+
+LC_MESSAGES
+yesexpr     "<U005E><U005B><U06C1><U0079><U0059><U005D><U002E><U002A>"
+noexpr      "<U005E><U005B><U0646><U006E><U004E><U005D><U002E><U002A>"
+
+yesstr      "<U06C1><U0627><U06BA>"
+nostr       "<U0646><U06C1><U06CC><U06BA>"
+END LC_MESSAGES
+
+
+LC_PAPER
+copy "hi_IN"
+END LC_PAPER
+
+
+LC_NAME
+% This is the ISO_IEC TR14652 Locale definition for the LC_NAME category
+% generated by IBM Basic CountryPack Transformer.
+%
+%
+name_fmt    "<U0025><U0070><U0025><U0074><U0025><U0066><U0025><U0074><U0025><U0067>"
+name_gen    ""
+name_mr     "<U062C><U0646><U0627><U0628>"
+name_mrs    "<U0645><U062D><U062A><U0631><U0645><U06C1>"
+name_miss   "<U06AA><U0645><U0627><U0631><U064A>"
+name_ms     "<U06AA><U0645><U0627><U0631>"
+
+END LC_NAME
+
+
+LC_ADDRESS
+copy "hi_IN"
+END LC_ADDRESS
+
+
+LC_TELEPHONE
+copy "hi_IN"
+END LC_TELEPHONE
+
+
+LC_MEASUREMENT
+copy "hi_IN"
+END LC_MEASUREMENT
