@@ -1,3 +1,8 @@
+2009-06-09  Ulrich Drepper  <drepper@redhat.com>
+
+	* locales/ur_IN: New file.
+	Contributed by Pravin Satpute <psatpute@redhat.com>.
+
 2009-05-04  Ulrich Drepper  <drepper@redhat.com>
 
 	* localedata/locales/bn_BD: Remove comment about missing collation
