@@ -1,3 +1,11 @@
+2009-06-09  Ulrich Drepper  <drepper@redhat.com>
+
+	* dlfcn/dlfcn.h: Remove comma at end of enum.
+	Patch by J.H.M. Dassen <rdassen@redhat.com>.
+
+	* libio/fileops.c (_IO_new_file_fopen): Don't prematurely stop
+	parsing mode string.
+
 2009-06-05  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/x86_64/rawmemchr.S: Minor optimization.
